--- a/style.css
+++ b/style.css
@@ -50,17 +50,17 @@ z-index: -1;
     
 }
 h1 {
-    font-family: 'DM';
     color: white;
     font-size: 5rem;
     text-shadow: 0 0 4px black;
     transform: translateY(-20vh)
 }
 h2 {
-    font-family: 'DM';
     color: white;
 }
-
+h1, h2, h3 {
+    font-family: 'DM';
+}
 .footer-container {
     background-color:rgb(0, 0, 0);
 }
@@ -74,4 +74,15 @@ h2 {
 .artists-container {
 }
 .contact-container {
+}
+
+.btn {
+border: 2px solid black;
+background-color: rgba(255, 255, 255, 0.675);
+color: black
+}
+.btn-primary {
+    border: 2px solid black;
+background-color: rgba(0, 0, 0, 0.675);
+color: rgb(255, 255, 255);
 }
