--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 
 body {
     background-color: rgb(190, 190, 190);
-    transition-duration: 0.2s !important;
 }
 .wrapper {
     height: 100vh;
@@ -23,9 +22,6 @@ body {
     transition-duration: 0.2s;
 }
 
-.header-container {
-background-color: rgb(255, 255, 255);
-}
 
 .landing-container {
 position: relative;    
@@ -61,8 +57,11 @@ h1 {
 h2 {
     color: white;
 }
-h1, h2, h3 {
+h1, h2, h3, h5 {
     font-family: 'DM';
+}
+h3 {
+    
 }
 p {
     font-family: 'Nanum';
@@ -79,18 +78,7 @@ p {
     background-color: black;
 }
 
-.btn {
-border: 2px solid black;
-background-color: rgba(255, 255, 255, 0.675);
-color: black
-}
-.btn-primary {
-    border: 2px solid black;
-background-color: rgba(0, 0, 0, 0.675);
-color: rgb(255, 255, 255);
-}
 .nav-link {
-    transition-duration: 2s !important;
 
 }
 .nav-link:hover {
@@ -98,5 +86,14 @@ color: rgb(255, 255, 255);
 }
 
 .nav-link:not(hover) {
-    transition-duration: 2s;
+}
+
+.back {
+    transition-duration: 0.2s !important;
+    transform: scale(1) !important;
+}
+.back:hover {
+    color: rgb(21, 66, 99) !important;
+    transition-duration: 0.2s !important;
+    transform: scale(1.2) !important;
 }
