--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
 }
 
 body {
-    background-color: rgb(190, 190, 190);
+    background-color: rgb(37, 37, 38);
     transition-duration: 0.2s;
+    position: relative;
 }
 
 .wrapper {
@@ -173,4 +174,12 @@ i:hover {
     color:rgb(33, 33, 33);
     border: 1px solid white;
     transition-duration: 0.2s;
+}
+.faq-banner {
+    background: url(./imgs/banner.webp) !important;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+.link-light.active {
+    background-color: rgb(34, 97, 21) !important;
 }
