--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-color: rgb(37, 37, 38);
+    background-color: rgb(33, 37, 41);
     transition-duration: 0.2s;
     position: relative;
 }
@@ -89,13 +89,25 @@ h5 {
 
 .btn {
     font-family: 'DM';
-
+}
+.faq-link {
+    font-family: 'DM';
+}
+.faq-title {
+    color: rgb(242, 255, 239)
 }
 
-p {
+p, th, td {
     font-family: 'Nanum';
     color: rgb(203, 203, 203)
+    ;
+    list-style-type: none;
 }
+th {
+    text-align: right;
+    font-family: 'DM';
+}
+
 
 .footer-container {
     background-color: rgb(0, 0, 0);
@@ -115,7 +127,7 @@ p {
 }
 
 .nav-link:hover {
-    color: rgb(136, 180, 141) !important;
+    color: #88b48d !important;
     transform: scale(1.03) !important;
 }
 
