--- a/style.css
+++ b/style.css
@@ -56,6 +56,13 @@ body {
     transform: translateY(-25vh);
 }
 
+@media only screen and (max-width: 896px) {
+    .title-btn {
+        flex-basis: 100%;
+        transform: translateY(-18vh);
+    }
+  }
+
 .title-addr {
     flex-basis: 100%;
 }
@@ -107,7 +114,9 @@ th {
     text-align: right;
     font-family: 'DM';
 }
-
+ label {
+    font-family: 'DM';
+}
 
 .footer-container {
     background-color: rgb(0, 0, 0);
@@ -149,7 +158,7 @@ i:hover {
 }
 
 .btn-primary {
-    background-color: rgb(97, 132, 85);
+    background-color: rgb(86, 147, 66);
     color:white;
     border: 1px solid white;
     transition-duration: 0.2s;
